--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="SplashScreenTitle">Splash Screen Title</string>
+    <string name="SplashScreenTitle">JWAKE App Title Here!!</string>
     <string name="title_activity_home_screen">HomeScreen</string>
 
     <string name="title_section1">Section 1</string>
