--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
 
     </string>
     <string name="title_activity_make_account">MakeAccount</string>
+    <string name="title_activity_activity_screen">activity_screen</string>
 </resources>
