--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     </string>
     <string name="title_activity_make_account">MakeAccount</string>
     <string name="title_activity_activity_screen">activity_screen</string>
+    <string name="title_activity_end_task">EndTask</string>
 </resources>
