--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="title_activity_make_account">MakeAccount</string>
     <string name="title_activity_activity_screen">activity_screen</string>
     <string name="title_activity_end_task">EndTask</string>
+    <string name="title_activity_results_screen">ResultsScreen</string>
 </resources>
