--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="title_section1">Name here</string>
     <string name="title_section2">Account section here</string>
     <string name="title_section3">Home</string>
+    <string name="title_section4">About</string>
+    <string name="title_section5">Options</string>
+    <string name="title_section6">Logout</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
