--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,12 @@
 <resources>
     <string name="app_name">My Application</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="SplashScreenTitle">JWAKE App Title Here!!</string>
     <string name="title_activity_home_screen">HomeScreen</string>
 
-    <string name="title_section1">Name here</string>
-    <string name="title_section2">Account section here</string>
+    <string name="title_section1">User</string>
+    <string name="title_section2">Account</string>
     <string name="title_section3">Home</string>
     <string name="title_section4">About</string>
     <string name="title_section5">Options</string>
