--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,16 @@
         a guide on what needs to be improved while you supervise your child’s training process and
         monitor his improvement. The earlier we start, the better!
     </string>
+    <string name="aboutparagraph">
+        The goal of My Lil Sidekick is to serve as a guide for parents to teach their
+        children to become independent. Autistic children are often ill-prepared to take care of
+        themselves by the time they finish their education and come of age. Their education usually
+        does not provide them with many important daily skills that your child will need to take
+        care of himself and participate as a member of society. You will be provided with
+        guidance on what needs to be improved while you supervise your child’s training process and
+        monitor his improvement as he grows closer to becoming an independent individual. The earlier
+        you start, the better!
+    </string>
     <string name="title_activity_make_account">MakeAccount</string>
     <string name="title_activity_activity_screen">activity_screen</string>
     <string name="title_activity_end_task">EndTask</string>
