Added user account options screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,8 @@
     <string name="title_activity_struggle_question_screen">StruggleQuestionScreen</string>
     <string name="title_activity_introduction_screen">Welcome!</string>
     <string name="title_activity_options_screen">OptionsScreen</string>
+    <string name="title_activity_user_screen">UserScreen</string>
+    <string name="title_activity_account_screen">AccountScreen</string>
 
 
 </resources>
